 * added support for suid and sgid flags in pmkinstall.
 * finished strip support in pmkinstall.
 * re-enabled pmkinstall build in makefiles.
 * added test_pmkinstall in test_all target in makefiles.
 * added mkvar_test.c in tests directory.
 * added mkvar target in tests makefile.
 * rewritten get_make_var() to work with gnu make.
 * added compat to I_OBJS to fix pmkinstall build.

27 Nov 2003 mipsator
 * updated pmkinstall man page.

27 Nov 2003 xsa
 * added ECHO_N, ECHO_C, ECHO_T variables to pmk.conf for autoconf compat.
 * sync pmk.conf(5) man page with the ECHO_* variables addition.

26 Nov 2003 mipsator
 * added test_pmkinstall target in makefiles.
 * improved mode operator support in pmkinstall.

25 Nov 2003 mipsator
 * added support for -o and -g options (owner and group) of pmkinstall.
 * added mode argument to makepath() in pathtools.
 * updated pmk.c to provide mode to makepath().
 * moved defines from source to header in pathtools.
 * added support for -d option (directory creation) of pmkinstall.
 * updated makefiles to include pathtools for pmkinstall.
 * added some code for strip support in pmkinstall.

24 Nov 2003 mipsator
 * started to rewrite pmkinstall from scratch (much easier than making
	xinstall portable).
 * implemented -m option (only octal values) of pmkinstall.
 * added basic support for symbolic values in -m option of pmkinstall.

23 Nov 2003 mipsator
 * removed oboslete definitions in kw_pmkscan[].

# snapshot 0.7.4

18 Nov 2003 mipsator
 * added DESTDIR and fixed Makefiles.

# snapshot 0.7.3

18 Nov 2003 mipsator
 * disabled build of pmkinstall as it's still work in progress.
 * added some getopts options to pmkcfg.sh (prefix override).
 * updated Makefile.pmk and Makefile in sync with pmkcfg.sh changes.
 * updated README and INSTALL to sync with pmkcfg.sh changes.

17 Nov 2003 mipsator
 * removed stuff in pmkinstall to make sunos happy.

14 Nov 2003 mipsator
 * replaced remaining warn() and warnx() calls in pmkinstall.
