@@ -9,6 +9,7 @@
  * added mkvar target in tests makefile.
  * rewritten get_make_var() to work with gnu make.
  * added compat to I_OBJS to fix pmkinstall build.
+ * added stuff related to blkcnt_t type.
 
 27 Nov 2003 mipsator
  * updated pmkinstall man page.
